--- a/BaiduInstituteOfFrontEndTechnology/Day8-9/task-2/nav.css
+++ b/BaiduInstituteOfFrontEndTechnology/Day8-9/task-2/nav.css
@@ -34,7 +34,7 @@ html {
 .page2,
 .page3,
 .page4 {
-    position: absolute;
+    position: relative;
     bottom: 10px;
     width: 20px;
     height: 30px;
@@ -57,6 +57,7 @@ html {
     right: 290px;
 }
 .nav{
+    position: relative;
     width: 100%;
     height:80px;
     border-bottom: 1px solid #cccccc;
@@ -89,7 +90,7 @@ html {
 }
 .main-container {
     position: absolute;
-    margin-top:80px;
+    margin-top:0px;
     width: 960px;
 }
 .row {
